--- a/P5_Interface1D/index.html
+++ b/P5_Interface1D/index.html
@@ -11,6 +11,7 @@
   <script language="javascript" type="text/javascript" src="controller.js"></script>
   <script language="javascript" type="text/javascript" src="display.js"></script>
   <script language="javascript" type="text/javascript" src="animation.js"></script>
+  <script language="javascript" type="text/javascript" src="block.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
 
